src/kubernetes/step-3/110-pod-frontend.yml
---

apiVersion: v1
kind: Pod
metadata:
  name: frontend
  namespace: com-gft-deuba-unity-release-1
  labels:
    PROJECT: com.gft.deuba.unity.release-1
    app.kubernetes.io/part-of: com.gft.deuba.unity.release-1.step-3
    app.kubernetes.io/component: frontend
spec:
  containers:
    - name: frontend
      image: com.gft.deuba.unity.release-1.frontend.fe-measure:v1
      args: [ "--name", "frontend-1", "--device", "http://thermometer/measure" ]
      imagePullPolicy: Never
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
