src/kubernetes/step-3/210-dep-thermometer-1.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: thermometer-v1.0.0
  namespace: com-gft-deuba-unity-release-1
  labels:
    PROJECT: com.gft.deuba.unity.release-1
    app.kubernetes.io/part-of: com.gft.deuba.unity.release-1.step-3
    app.kubernetes.io/component: thermometer
    app.kubernetes.io/version: "1.0.0"
spec:
  replicas: 3
  selector:
    matchLabels:
      PROJECT: com.gft.deuba.unity.release-1
      app.kubernetes.io/part-of: com.gft.deuba.unity.release-1.step-3
      app.kubernetes.io/component: thermometer
  template:
    metadata:
      name: thermometer
      labels:
        PROJECT: com.gft.deuba.unity.release-1
        app.kubernetes.io/part-of: com.gft.deuba.unity.release-1.step-3
        app.kubernetes.io/component: thermometer
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
        - name: thermometer
          image: com.gft.deuba.unity.release-1.application.ms-measure:v1
          imagePullPolicy: Never
          args: [ "--type", "thermometer", "--address", "01:00", "--name", "thermometer-1", "--randomsvc", "http://random/random" ]
          resources:
            limits:
              memory: "128Mi"
              cpu: "250m"
