src/kubernetes/step-3/230-dep-thermometer-3.yml
##############################################################################
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: thermometer-v3.0.0
  namespace: com-gft-deuba-unity-release-1
  labels:
    PROJECT: com.gft.deuba.unity.release-1
    app: thermometer
    version: "3.0.0"

spec:

  replicas: 3

  selector:
    matchLabels:
      PROJECT: com.gft.deuba.unity.release-1
      app: thermometer

  template:
    metadata:
      name: thermometer
      labels:
        PROJECT: com.gft.deuba.unity.release-1
        app: thermometer
        version: 3.0.0
    spec:
      containers:
        - name: thermometer
          image: com.gft.deuba.unity.release-1.application.ms-measure:v3
          imagePullPolicy: Never
          args: [ "--type", "thermometer", "--address", "01:00", "--name", "thermometer-3", "--randomsvc", "http://api/random/random" ]
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "128Mi"
              cpu: "250m"
