src/kubernetes/step-3/310-dep-random-1.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: random
  namespace: com-gft-deuba-unity-release-1
  labels:
    PROJECT: com.gft.deuba.unity.release-1
    app.kubernetes.io/part-of: com.gft.deuba.unity.release-1.step-3
    app.kubernetes.io/component: random
spec:
  replicas: 3
  selector:
    matchLabels:
      PROJECT: com.gft.deuba.unity.release-1
      app.kubernetes.io/part-of: com.gft.deuba.unity.release-1.step-3
      app.kubernetes.io/component: random
  template:
    metadata:
      name: random-1
      namespace: com-gft-deuba-unity-release-1
      labels:
        PROJECT: com.gft.deuba.unity.release-1
        app.kubernetes.io/part-of: com.gft.deuba.unity.release-1.step-3
        app.kubernetes.io/component: random
        app.kubernetes.io/version: "1.0.0"
    spec:
      containers:
        - name: random
          image: com.gft.deuba.unity.release-1.backend.ms-random:v1
          imagePullPolicy: Never
          args: [ "--name", "random-1" ]
          resources:
            limits:
              memory: "128Mi"
              cpu: "250m"
