src/kubernetes/step-3/010-gateway.yaml
##############################################################################
##############################################################################
##############################################################################
---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-ingress-gateway
  namespace: com-gft-deuba-unity-release-1
spec:
  selector:
    istio: ingressgateway
  servers:

  - port:
      number: 80
      name: http
      protocol: HTTP

    hosts:

    - "*"

##############################################################################
##############################################################################
##############################################################################
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-route
  namespace: com-gft-deuba-unity-release-1
spec:

  hosts:

    - "*"

  gateways:

    - app-ingress-gateway

  http:

    - name: thermometer

      match:
      - uri:
          prefix: /thermometer/

      rewrite:
        uri: /

      delegate:
        name: thermometer-delegate
        namespace: com-gft-deuba-unity-release-1

    - name: frontend-pre-prod
      match:
      - uri:
          prefix: /pre-prod/
      - uri:
          exact: /pre-prod
      rewrite:
        uri: /

      headers:
        request:
          set:
            x-environment: pre-prod

      route:
        - destination:
            host: frontend
            port:
              number: 80

    - name: frontend-prod
      match:
      - uri:
          prefix: /prod/
      - uri:
          exact: /prod

      headers:
        request:
          set:
            x-environment: prod

      rewrite:
        uri: /

      route:
        - destination:
            host: frontend
            port:
              number: 80

    - name: frontend-fallback

      headers:
        request:
          set:
            x-environment: pre-prod

      route:
        - destination:
            host: frontend
            port:
              number: 80
