src/kubernetes/step-3/105-vs-frontend.yaml
##############################################################################
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-ingress-pre-prod
  namespace: com-gft-deuba-unity-release-1
  labels:
    PROJECT: com.gft.deuba.unity.release-1
    app: frontend

spec:

  hosts:

    - "mysite-uat.localgft.com"

  gateways:

    - app-ingress-gateway

  http:

# ----------------------------------------------------------------------------

    - name: frontend-pre-prod

      headers:

        request:
          set:
#             Set-Cookie: environment=
            x-environment: pre-prod

        response:
          set:
#             Set-Cookie: environment=pre-prod; Domain=localgft.com; SameSite=None; Secure; HttpOnly
            Set-Cookie: environment=pre-prod; SameSite=None; Secure; HttpOnly
            Access-Control-Allow-Origin: "*"
            x-environment: pre-prod

      route:
        - destination:
            host: frontend
            port:
              number: 80

      corsPolicy:
        allowOrigins:
        - regex: ".*"
        allowMethods:
        - GET
        - POST
        - OPTIONS
        maxAge: 24h
        allowCredentials: true



##############################################################################
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-ingress-prod
  namespace: com-gft-deuba-unity-release-1
  labels:
    PROJECT: com.gft.deuba.unity.release-1
    app: frontend

spec:

  hosts:

    - "mysite-prod.localgft.com"
#     - "mysite-pilot.localgft.com"

  gateways:

    - app-ingress-gateway

  http:

# ----------------------------------------------------------------------------

    - name: frontend-prod

      headers:

        request:
          set:
#             Set-Cookie: environment=
            x-environment: prod

        response:
          set:
#             Set-Cookie: environment=prod; Domain=localgft.com; SameSite=None; Secure; HttpOnly
            Set-Cookie: environment=prod; SameSite=None; Secure; HttpOnly
            Access-Control-Allow-Origin: "*"
            x-environment: prod

      route:
        - destination:
            host: frontend
            port:
              number: 80

      corsPolicy:
        allowOrigins:
        - regex: ".*"
        allowMethods:
        - GET
        - POST
        - OPTIONS
        maxAge: 24h
        allowCredentials: true
