src/kubernetes/step-3/205-vs-thermometer.yaml
##############################################################################
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: thermometer-ingress
  namespace: com-gft-deuba-unity-release-1
  labels:
    PROJECT: com.gft.deuba.unity.release-1
    app: thermometer

spec:

  hosts:

    - "*"

  gateways:

    - app-ingress-gateway

  http:

# ----------------------------------------------------------------------------

    - name: thermometer-pre-prod

      match:

      - uri:

          prefix: /thermometer/

        headers:
          x-environment: 
            exact: pre-prod

      - uri:

          prefix: /thermometer/

        headers:
          Cookie:
            regex: (.*;\s*)?environment=pre-prod(\s*;.*)?

      rewrite:
        uri: /

      headers:
        request:
          set:
            x-environment: pre-prod

        response:
          set:
            x-environment: pre-prod

      route:
        - destination:
            host: thermometer
            subset: pre-prod

# ----------------------------------------------------------------------------

    - name: thermometer-fallthrough

      match:

      - uri:
          prefix: /thermometer/

      rewrite:
        uri: /

      headers:
        request:
          set:
            x-environment: prod

        response:
          set:
            x-environment: prod

      route:
        - destination:
            host: thermometer
            subset: prod
