src/kubernetes/step-3/305-sv-random.yml
##############################################################################
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: random-ingress-api
  namespace: com-gft-deuba-unity-release-1
  labels:
    PROJECT: com.gft.deuba.unity.release-1
    app: random

spec:

  hosts:

    - "*"

  gateways:

    - app-ingress-gateway

  http:

# ----------------------------------------------------------------------------

    - name: random-pre-prod

      match:

      - uri:

          prefix: /random/

        headers:

          x-environment: 
            exact: pre-prod

      - uri:

          prefix: /random/

        headers:
          Cookie:
            regex: (.*;\s*)?environment=pre-prod(\s*;.*)?

      rewrite:
        uri: /

      headers:
        request:
          set:
            x-environment: pre-prod

        response:
          set:
            x-environment: pre-prod

      route:
        - destination:
            host: random
            subset: pre-prod

# ----------------------------------------------------------------------------

    - name: random-prod

      match:

      - uri:

          prefix: /random/

        headers:

          x-environment: 
            exact: prod

      - uri:

          prefix: /random/

        headers:
          Cookie:
            regex: (.*;\s*)?environment=prod(\s*;.*)?

      rewrite:
        uri: /

      headers:
        request:
          set:
            x-environment: prod

        response:
          set:
            x-environment: prod

      route:
        - destination:
            host: random
            subset: prod
